--- a/paper/Congruence.lagda.tex
+++ b/paper/Congruence.lagda.tex
@@ -14,7 +14,7 @@ open import Process
 \subsection{Structural Pre-Congruence}
 \label{sec:congruence-agda}
 
-We formalize structural precongruence as a binary relation between processes
+We formalise structural precongruence as a binary relation between processes
 that are well typed in the \emph{same} typing context. This entails that
 structural precongruence preserves typing by definition.
 
@@ -232,7 +232,7 @@ $(\AgdaInductiveConstructor{>}~r)$.
 
 Finally, in \Cref{sec:semantics} we have colloquially defined $\pcong$ as a
 ``\emph{pre-congruence}'', implying that it is reflexive, transitive relation
-and that it is is preserved by some forms of calculus. In the formalization we
+and that it is is preserved by some forms of calculus. In the formalisation we
 have to be precise and we introduce specific rules:
 
 \begin{code}
