--- a/paper/Context.tex
+++ b/paper/Context.tex
@@ -51,7 +51,7 @@ contexts are represented using lists of types, where the (polymorphic)
 \AgdaInductiveConstructor{\_∷\_} are defined in the module
 \AgdaModule{Data.List} of Agda's standard library. We will keep using
 $\ContextC$, $\ContextD$ and $\ContextE$ to range over typing contexts as we
-have done in \Cref{sec:typing-rules}, even though in the Agda formalization they
+have done in \Cref{sec:typing-rules}, even though in the Agda formalisation they
 are lists instead of finite maps.
 
 \begin{code}%
@@ -643,7 +643,7 @@ reason, it is worth recalling a number of definitions from the
 \Cref{tab:predicates}.
 
 Context splitting is going to be pervasive in the subsequent development, to the
-point that it contributes substantially to the complexity of the formalization.
+point that it contributes substantially to the complexity of the formalisation.
 For this reason, we invest some effort in defining a few abstractions that allow
 us to hide context splittings and enhance code readability.
 %
@@ -699,7 +699,7 @@ witnessing the splitting $\Splitting\ContextC\ContextD\ContextE$ along with
 $P~\ContextD$ and $Q~\ContextE$.
 %
 The use of the metavariables $P$ and $Q$ for denoting predicates over contexts
-is not without reason. As we will see shortly, in our formalization processes
+is not without reason. As we will see shortly, in our formalisation processes
 are indeed predicates over typing contexts, albeit not the only ones.
 
 Along with \AgdaDatatype{∗} we define the \emph{separating implication} (also
