--- a/paper/DeadlockFreedom.lagda.tex
+++ b/paper/DeadlockFreedom.lagda.tex
@@ -3,7 +3,7 @@
 
 As we have seen in \Cref{sec:calculus}, the deadlock freedom result
 (\Cref{thm:df}) rests on some notions and predicates about processes which we
-now formalize in Agda. First of all we need to define the notion of
+now formalise in Agda. First of all we need to define the notion of
 \emph{thread}, that is any process other than a cut. As it turns out, it is
 convenient to provide a more fine-grained classification of threads,
 distinguishing between links, input/output actions, and sometimes also whether
