--- a/paper/Reduction.tex
+++ b/paper/Reduction.tex
@@ -292,7 +292,7 @@
 \AgdaBound{P₃}\<%
 \end{code}
 
-Just like structural precongruence, reduction is formalized as a binary relation
+Just like structural precongruence, reduction is formalised as a binary relation
 between processes that are well typed in the very same typing context. Thus, the
 definition of reduction embeds the subject reduction result.
 
