--- a/paper/Safety.tex
+++ b/paper/Safety.tex
@@ -43,10 +43,10 @@
 \end{code}
 
 We have seen that type safety is a simple instance of deadlock freedom, which is
-made even simpler to formalize in our development where processes are
+made even simpler to formalise in our development where processes are
 intrinsically typed. We start by defining reduction contexts as processes with a
-single hole. In our intrinsically-typed formalization, reduction contexts are
-parameterized by the typing context $\ContextD$ of the hole, which is invariant,
+single hole. In our intrinsically-typed formalisation, reduction contexts are
+parameterised by the typing context $\ContextD$ of the hole, which is invariant,
 and indexed by the typing context $\ContextC$ of the whole reduction context:
 
 \begin{code}%
