--- a/paper/Type.tex
+++ b/paper/Type.tex
@@ -377,7 +377,7 @@ It is straightforward to prove that duality is a an involution.
 \AgdaFunction{dual-inv}\<%
 \end{code}
 
-This property is so important in the rest of the formalization that it is worth
+This property is so important in the rest of the formalisation that it is worth
 defining an implicit rewriting rule so that Agda can autonomously apply it
 whenever possible. This is achieved by means of the following pragma
 directive.\footnote{The directive is effective provided that the option
@@ -903,7 +903,7 @@ Duality and substitutions are meant to commute.
 \end{code}
 
 It is worth looking at one case in the proof of \AgdaFunction{dual-subst},
-namely when the type is a dualized type variable:
+namely when the type is a dualised type variable:
 
 \begin{code}%
 \>[0]\AgdaFunction{dual-subst}\AgdaSpace{}%
@@ -1080,7 +1080,7 @@ quite obscure Agda code.
 \end{code}
 
 Just like \AgdaFunction{dual-inv}, \AgdaFunction{dual-subst} too is key in the
-formalization that follows. Therefore, we add it to the set of implicit
+formalisation that follows. Therefore, we add it to the set of implicit
 rewriting rules used by Agda so that we do not have to think about this property
 again.
 
