--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -1,7 +1,7 @@
-\section{Agda Formalization}
+\section{Agda Formalisation}
 \label{sec:agda}
 
-In this section we describe the formalization of \LCP in Agda. We present in
+In this section we describe the formalisation of \LCP in Agda. We present in
 detail only the key parts of the code, including the representation of types,
 processes, the definition of the operational semantics and the statement of the
 main results. The interested reader may refer to the public repository for the
