--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,11 +1,11 @@
 \abstract{%
     We describe the Agda formalisation of a process calculus based on classical
-    linear logic that supports the modeling of binary sessions. The
-    formalisation turns out to be remarkably compact despite the use of
-    ``plain'' context splitting for the proper management of linear channels. We
-    argue that the logical nature of the calculus and the use of explicit
-    continuations are contributing factors to the simplicity of its
-    formalisation.
+    linear logic that supports the modeling of binary sessions through their
+    encoding with explicit continuation channels. The formalisation turns out to
+    be remarkably compact despite the use of context splitting for the proper
+    management of linear channels. We argue that the logical nature of the
+    calculus and the use of explicit continuations are contributing factors to
+    the simplicity of its formalisation.
     %
 }
 
