--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -51,7 +51,7 @@ More specifically, we describe a calculus called \LCP whose type system
 coincides with the proof system of classical linear logic and that features
 \emph{linear channels} instead of sessions. Linear channels are meant to be used
 for a \emph{single} communication. Structured communications involving the
-exchange of several messages within the same session is modeled in \LCP using
+exchange of several messages within the same session are modeled in \LCP using
 \emph{explicit continuations} according to the well-known encoding of (binary)
 sessions into the linear
 $\pi$-calculus~\citep{KobayashiPierceTurner99,Kobayashi02b,DardhaGiachinoSangiorgi17}.
